# buddhist-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: decay_cache.py  karma_audit.py  leak_detection.py  reactive_config.py  reactive_spreadsheet.py  structural_identity.py  three_marks.py
scripts/: make_review_bundle.sh
src/buddhism/: __init__.py  anatta.py  anitya.py  dukkha.py  examine.py  karma.py  pratitya.py
src/buddhism/koans/: __init__.py  __main__.py  _runner.py  k01_impermanence.py  k02_dependent_origination.py  k03_non_self.py  k04_clinging.py  k05_emptiness.py  k06_karma.py  k07_three_marks.py
src/buddhism/path/: __init__.py  __main__.py  checks.py  cli.py
tests/: test_anatta.py  test_anitya.py  test_dukkha.py  test_examine.py  test_integration.py  test_karma.py  test_koans.py  test_path.py  test_pratitya.py
